# template_cmake_project

./: CMakeLists.txt  source_file_main.cpp
source_dir_A/: CMakeLists.txt  source_file_a.cpp  source_file_a.hpp
source_dir_B/: CMakeLists.txt  source_file_b.cpp  source_file_b.hpp
